Activity Page: fix tooltip overflow on edit mode

--- a/front/src/app/components/popup/popup.component.scss
+++ b/front/src/app/components/popup/popup.component.scss
@@ -203,8 +203,9 @@
 
   .content {
     flex: 1;
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow: visible;
+    // overflow-y: auto;
+    // overflow-x: hidden;
     display: flex;
     flex-direction: column;
     padding: 16px 32px;
