--- a/front/src/app/components/tooltips/tooltips.component.scss
+++ b/front/src/app/components/tooltips/tooltips.component.scss
@@ -16,6 +16,23 @@
     }
   }
 
+  &.top .tooltip-text {
+    bottom: calc(85% + 4px);
+    .triangle {
+      transform: rotate(0.5turn);
+      position: absolute;
+      bottom: -4px;
+    }
+  }
+
+  &.bottom .tooltip-text {
+    top: calc(85% + 4px);
+    .triangle {
+      position: absolute;
+      top: -4px;
+    }
+  }
+
   &.medium .tooltip-text {
     //border: 3px solid red;
     width: 400px;
@@ -59,7 +76,6 @@
     position: absolute;
     z-index: 1;
     visibility: hidden;
-    top: calc(85% + 4px);
     left: 50%;
     cursor: auto;
 
@@ -80,8 +96,6 @@
       border-color: transparent transparent fColor(tooltipBgTitleColor)
         transparent;
       border-style: solid;
-      position: absolute;
-      top: -4px;
       left: calc(50% - 2px);
     }
 
@@ -118,6 +132,9 @@
     .content {
       padding: 16px;
       color: fColor(tooltipContentColor);
+      max-height: 200px;
+      overflow-y: scroll;
+      margin-bottom: 4px;
     }
 
     .footer {
