--- a/front/src/app/routes/activities/popin-edit-activities/popin-edit-activities.component.scss
+++ b/front/src/app/routes/activities/popin-edit-activities/popin-edit-activities.component.scss
@@ -208,8 +208,12 @@
   }
 }
 
-.content-popin {
+.content-popin-scroll {
   overflow-y: scroll;
+}
+
+.content-popin-no-scroll {
+  overflow: visible;
 }
 
 .item-template {
